[package]
name = "client-rust-test"
version = "0.1.0"
authors = ["you06 <you1474600@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tikv-client = {path="../client-rust"}
clap = "2.32"
runtime = { version = "0.3.0-alpha.8", default-features = false }
runtime-tokio = "0.3.0-alpha.6"
kvproto = { git = "https://github.com/pingcap/kvproto.git", features = [ "prost-codec" ], default-features = false }

[patch.crates-io]
raft-proto = { git = "https://github.com/tikv/raft-rs", rev = "e624c1d48460940a40d8aa69b5329460d9af87dd" }
